--- a/src/styles/_img-link.scss
+++ b/src/styles/_img-link.scss
@@ -2,6 +2,7 @@
 .img-link {
   position: relative;
   text-decoration: none;
+  border-bottom: 0;
 
   @media (min-width: 64rem) {
     display: grid;
