--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,6 +11,22 @@ p {
   font-weight: 100;
 }
 
+a {
+  padding-bottom: 4px;
+  color: $c--black;
+  text-decoration: none;
+  border-bottom: 1px solid lighten($c--green--300, 15%);
+  transition: border-color .2s linear;
+
+  &:hover {
+    border-bottom-color: $c--green--100;
+  }
+
+  svg {
+    vertical-align: middle;
+  }
+}
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   max-width: 60ch;
@@ -45,6 +61,29 @@ h5, .h5 {
   font-weight: 100;
   line-height: 0.8;
   padding-right: 0.5rem;
+}
+
+.highlight {
+  padding: 4px;
+  background: darken($c--red--200, 15%);
+  color: $c--white;
+}
+
+.highlight--alt {
+
+  background: darken($c--green--300, 15%);
+}
+
+.tldr__items {
+  margin: 0;
+}
+
+.tldr__title {
+  font-weight: bold;
+}
+
+.tldr__desc {
+  margin: 0 0 $s--500;
 }
 
 @media (min-width: 64rem) {
