--- a/src/index.njk
+++ b/src/index.njk
@@ -201,7 +201,7 @@ title: Luft & Liebe
   </section>
   <section class="presents section section--padded">
     <div class="video-container">
-      <video class="video" src="images/video.mp4" poster="poster.jpg" autoplay loop>
+      <video class="video" src="images/video.mp4" poster="poster.jpg" autoplay loop playsinline>
       </video>
     </div>
     <div class="wrapper--text">
