--- a/src/styles/_presents.scss
+++ b/src/styles/_presents.scss
@@ -39,7 +39,10 @@
 }
 
 .video {
-  height: 100%;
   max-width: none;
-  // transform: translateY(-50%);
+  min-width: 100%;
+  min-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
