--- a/src/index.njk
+++ b/src/index.njk
@@ -19,7 +19,7 @@ title: Luft & Liebe
       </div>
       <p class="first-letter">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
       <div class="registration">
-        <a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank" class="btn btn--primary">Jetzt Anmelden!</a>
+        <a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank" class="btn btn--primary">Als Gast anmelden</a>
       </div>
     </div>
     <div class="wrapper--text section--padded">
@@ -195,8 +195,11 @@ title: Luft & Liebe
       <h3>Artist Registration</h3>
       <p>Du hast Bock unser Festival <span class="highlight highlight--alt">künstlerisch</span> zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder oder... Wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
       <p><span class="highlight highlight--alt">Achtung:</span> solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (Anni, Chris, Flo)</p>
+      <div class="registration">
+        <a href="https://forms.gle/vZNJUtvGt85ghkeW8" target="_blank" class="btn btn--primary">Als Artist anmelden</a>
+      </div>
       <h3>Support Workshops</h3>
-      <p>Du hast Lust an den Tagen vor dem Hauptakt tatkräftig anzupacken? Es gibt sicher noch einiges zu tun und wir können <span class="highlight highlight--alt">jede helfende Hand</span> brauchen, sei es beim Aufbau, in der Küche oder beim Feuer und Stockbrot machen. Näheres erfährst du im Newsletter.</p>
+      <p>Du hast Lust an den Tagen vor dem Hauptakt tatkräftig anzupacken? Es gibt sicher noch einiges zu tun und wir können <span class="highlight highlight--alt">jede helfende Hand</span> brauchen, sei es beim Aufbau, in der Küche oder beim Feuer und Stockbrot machen.</p>
     </div>
   </section>
   <section class="presents section section--padded">
