--- a/src/index.njk
+++ b/src/index.njk
@@ -194,7 +194,7 @@ title: Luft & Liebe
       <h2>Volunteering</h2>
       <h3>Artist Registration</h3>
       <p>Du hast Bock unser Festival <span class="highlight highlight--alt">künstlerisch</span> zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder oder... Wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
-      <p><span class="highlight highlight--alt">Achtung:</span> solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (Anni, Chris, Flo)</p>
+      <p><span class="highlight highlight--alt">Achtung:</span> solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
       <div class="registration">
         <a href="https://forms.gle/vZNJUtvGt85ghkeW8" target="_blank" class="btn btn--primary">Als Artist anmelden</a>
       </div>
@@ -210,7 +210,7 @@ title: Luft & Liebe
     <div class="wrapper--text">
       <h2>Geschenke</h2>
       <p>Unser größtes Geschenk ist es, dass du den Weg auf dich nimmst und dabei bist. Wenn du trotzdem etwas schenken magst, dann freuen wir uns über eine Spende für unseren anstehenden <span class="highlight">Road&nbsp;Trip</span>.</p>
-      <p>Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Team.</p>
+      <p>Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Team (<a href="mailto:anne-marie.wassmuth@gmx.de">Anni</a>, <a href="mailto:christian@naegele.it">Chris</a>, <a href="mailto:naeflo@hotmail.com">Flo</a>).</p>
     </div>
   </section>
   <div class="wrapper--text">
