--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -13,7 +13,7 @@ p {
 
 a {
   padding-bottom: 4px;
-  color: $c--black;
+  color: inherit;
   text-decoration: none;
   border-bottom: 1px solid lighten($c--green--300, 15%);
   transition: border-color .2s linear;
