--- a/src/index.njk
+++ b/src/index.njk
@@ -41,7 +41,7 @@ title: Luft & Liebe
         <dd class="tldr__desc">Ihr müsst bis nach <a href="https://goo.gl/maps/bfXvknN99fhf5jwCA" target="_blank">{% include "i--map.svg" %}&nbsp;Lana</a>, dann mit der Schwebebahn den Berg hoch und mit dem Sessellift oder zu Fuß (ca. 50min) bis zum Ferienheim.</dd>
         <dt class="tldr__title">Schlafen</dt>
         <dd class="tldr__desc">Ganz spartanisch im Ferienheim oder komfortabel auf der <br><a href="https://goo.gl/maps/N3EmK4wzJ93VhkbDA" target="_blank">{%include "i--map.svg"%}&nbsp;Family&nbsp;Alm&nbsp;Gampl</a></dd>
-        <dt class="tldr__title">TODO</dt>
+        <dt class="tldr__title">Nicht vergessen</dt>
         <dd class="tldr__desc"><a href="https://forms.gle/VCB9XgttZK9w6WWn7" target="_blank">Anmelden!</a> Danke :)</dd>
       </dl>
     </div>
