- add intro text animation

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,18 @@ layout: layouts/base.njk
 title: Luft & Liebe
 ---
 <header class="intro">
-  <h1>Luft & Liebe</h1>
+  <h1>
+    <span class="char">L</span>
+    <span class="char">u</span>
+    <span class="char">f</span>
+    <span class="char">t&nbsp;</span>
+    <span class="char">&&nbsp;</span>
+    <span class="char">L</span>
+    <span class="char">i</span>
+    <span class="char">e</span>
+    <span class="char">b</span>
+    <span class="char">e</span>
+  </h1>
 </header>
 <main class="main">
   <section class="concept section section--padded">
