--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -8,11 +8,17 @@
   background: $c--green--300;
   font-size: calc(40% + .75vw);
   text-transform: uppercase;
-  letter-spacing: 1vw;
+  letter-spacing: .25vw;
   color: $c--white;
 
   h1 {
     font-weight: 100;
     color: inherit;
   }
+}
+
+.char {
+  display: inline-block;
+  transform: scale(.75);
+  opacity: 0;
 }
