--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,10 @@
 @import '_presents.scss';
 @import '_footer.scss';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: $c--white;
   overflow-x: hidden;
