--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -3,38 +3,17 @@
   display: flex;
   align-items: stretch;
   justify-content: stretch;
-  width: 100vw;
-  // max-width: 24rem;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
-  transform: translateY(-100vh);
-  // max-width: 25rem;
-  // margin: 0 auto;
-  // padding: calc(4rem + 1vw) 0;
 }
 
-#herz,
-#berg--abdeckung {
-  opacity: 0;
+.concept {
+  margin-top: -40vh;
 }
 
-#berg--hinten,
-#berg--vorne {
-  transform-origin: center bottom;
-  transform: translateY(36vh) scale(6);
-}
-
-#berg--hinten {
-  stroke: $c--green--100;
-  fill: $c--green--100;
-}
-
-#berg--vorne {
-  stroke: $c--red--200;
-  fill: $c--red--200;
-}
-
-#claim {
-  fill: white;
-  transform: translateY(-5vh);
-}
+// #claim {
+//   max-width: 64rem;
+//   fill: white;
+//   transform: translateY(-5vh);
+// }
