- mobile animation good

--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -8,12 +8,8 @@
   margin: 0 auto;
 }
 
-.concept {
-  margin-top: -40vh;
-}
-
-// #claim {
-//   max-width: 64rem;
-//   fill: white;
-//   transform: translateY(-5vh);
+// @media (orientation: portrait) {
+//   .concept {
+//     margin-top: -40vh;
+//   }
 // }
