--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 title: Luft & Liebe
 ---
 <header id="js-intro" class="intro">
-  {# <h1 id="js-logo">
+  <h1 id="js-logo-claim" class="logo-claim">
     <span class="char">L</span>
     <span class="char">u</span>
     <span class="char">f</span>
@@ -15,7 +15,7 @@ title: Luft & Liebe
     <span class="char">b</span>
     <span class="char">e</span>
   </h1>
-  <div id="js-mountain--left" class="mountain">
+  {#<div id="js-mountain--left" class="mountain">
     {% include "mountain.svg" %}
   </div>
   <div id="js-mountain--right" class="mountain mountain--large">
