--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
   width: 100%;
   height: 100vh;
   background: $c--green--300;
@@ -18,7 +17,13 @@
   }
 }
 
+.logo-claim {
+
+}
+
 .char {
+  position: relative;
+  z-index: 10;
   display: inline-block;
   transform: scale(.75);
   opacity: 0;
