--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -1,11 +1,14 @@
 
 .logo {
+  position: relative;
+  z-index: 1;
   display: flex;
   align-items: stretch;
   justify-content: stretch;
   width: 100%;
   height: 100vh;
   margin: 0 auto;
+  overflow: hidden;
 
   svg {
     width: 100%;
