--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -6,6 +6,7 @@
   align-items: stretch;
   justify-content: stretch;
   width: 100%;
+  max-width: 32rem;
   height: 100vh;
   margin: 0 auto;
   overflow: hidden;
