--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,12 +22,12 @@
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
   background-color: $c--white;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 figure {
