--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,9 +21,10 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow-x: hidden;
-}
+// html {
+//   height: 100%;
+//   overflow-x: hidden;
+// }
 
 body {
   background-color: $c--white;
