--- a/src/index.njk
+++ b/src/index.njk
@@ -15,19 +15,19 @@ title: Luft & Liebe
     <span class="char">b</span>
     <span class="char">e</span>
   </h1>
-  {#<div id="js-mountain--left" class="mountain">
+  <div id="js-mountain--left" class="mountain">
     {% include "mountain.svg" %}
   </div>
   <div id="js-mountain--right" class="mountain mountain--large">
     {% include "mountain.svg" %}
-  </div> #}
+  </div>
 </header>
 <main class="main">
-  <div id="js-logo" class="logo">
-    {% include "logo.svg" %}
-  </div>
   <section class="concept section section--padded">
     <div class="wrapper--text">
+      <div id="js-logo" class="logo">
+        {% include "logo.svg" %}
+      </div>
       <div class="main-act">
         <time class="main-act__date" datetime="">
           {% include 'datum.svg' %}
