--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,5 +1,3 @@
-// .main {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
+.main-act {
+  padding: $s--700 0;
+}
